--- a/_data/topnav.yml
+++ b/_data/topnav.yml
@@ -24,7 +24,7 @@ topnav_dropdowns:
           external_url: http://idratherbewriting.com/category-jekyll/
     - title: Products
       folderitems:
-        - title: Jekyll Documentation Theme
+        - title: PICK8CHU's github/blog
           url: /mydoc_introduction.html
         - title: Product 1
           url: /p1_landing_page.html
