--- a/_data/topnav.yml
+++ b/_data/topnav.yml
@@ -4,9 +4,9 @@ topnav:
 - title: Topnav
   items:
     - title: GitHub
-      external_url: https://github.com/tomjoht/documentation-theme-jekyll
-    - title: News
-      url: /news
+      external_url: https://github.com/pick8chu
+   #- title: News
+   #   url: /news
 
 #Topnav dropdowns
 topnav_dropdowns:
@@ -22,11 +22,11 @@ topnav_dropdowns:
           external_url: http://stackoverflow.com/questions/tagged/jekyll
         - title: Jekyll on my blog
           external_url: http://idratherbewriting.com/category-jekyll/
-    - title: Products
-      folderitems:
-        - title: PICK8CHU's github/blog
-          url: /mydoc_introduction.html
-        - title: Product 1
-          url: /p1_landing_page.html
-        - title: Product 2
-          url: /p2_landing_page.html
+  #  - title: Products
+  #    folderitems:
+  #      - title: PICK8CHU's github/blog
+  #        url: /mydoc_introduction.html
+  #      - title: Product 1
+  #        url: /p1_landing_page.html
+  #      - title: Product 2
+  #        url: /p2_landing_page.html
