--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -75,6 +75,7 @@ entries:
       
       subfolders:
       - title: Greedy Algorithm
+        url: /algorithm-greedy-overview.html
         output: web
         subfolderitems:
 
