--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -84,6 +84,10 @@ entries:
     - title: Etc
       url: /algorithm-etc.html
       output: web, pdf
+    
+    - title: Fenwick Tree
+      url: /fenwick.html
+      output: web, pdf
       
       subfolders:
       - title: Greedy Algorithm
