--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -81,12 +81,16 @@ entries:
       url: /prime_number.html
       output: web, pdf
     
-    - title: Etc
-      url: /algorithm-etc.html
-      output: web, pdf
-    
     - title: Fenwick Tree
       url: /fenwick.html
+      output: web, pdf
+    
+    - title: Algorithm Course
+      url: /algorithm-course.html
+      output: web, pdf
+    
+    - title: Etc
+      url: /algorithm-etc.html
       output: web, pdf
       
       subfolders:
