--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -138,7 +138,7 @@ entries:
           url: /buy_and_sell_stock_2.html
           output: web, pdf
 
-        - title: rotate_array
+        - title: rotate array
           url: /rotate_array.html
           output: web, pdf
 
