--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -170,11 +170,15 @@ entries:
           url: /pseudo-palindromic-paths-in-a-binary-tree.html
           output: web, pdf
 
+        - title: Create Sorted Array Through Instructions (Fenwick Tree)
+          url: /create-sorted-array-through-instructions.html
+          output: web, pdf
+
       - title: baekjoon
         output: web
         subfolderitems:
 
-        - title: 2887 - 행성터널
+        - title: 2887 - 행성터널 (krusical)
           url: /MST_planets.html
           output: web, pdf
 
