--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -174,6 +174,10 @@ entries:
           url: /create-sorted-array-through-instructions.html
           output: web, pdf
 
+        - title: Boats To Save People (Two pointers)
+          url: /boats-to-save-people.html
+          output: web, pdf
+
       - title: baekjoon
         output: web
         subfolderitems:
