--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -234,6 +234,18 @@ entries:
           url: /new_year_chaos.html
           output: web, pdf
 
+      - title: codingame
+        output: web
+        subfolderitems:
+
+        - title: brutaltester
+          url: /brutaltester.html
+          output: web, pdf
+
+        - title: 2021_Spring_Challenge
+          url: /2021_Spring_Challenge.html
+          output: web, pdf
+
 #  - title: Overview
 #    output: web, pdf
 #    folderitems:
