--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -239,7 +239,7 @@ entries:
         subfolderitems:
 
         - title: brutaltester
-          url: /brutaltester.html
+          url: /brutal_tester.html
           output: web, pdf
 
         - title: 2021_Spring_Challenge
