--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -210,6 +210,10 @@ entries:
           url: /number-of-submatrices-that-sum-to-target.html
           output: web, pdf
 
+        - title: Interleaving String (DP/memoization)
+          url: /interleaving_string.html
+          output: web, pdf
+
       - title: baekjoon
         output: web
         subfolderitems:
