--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -238,6 +238,14 @@ entries:
           url: /new_year_chaos.html
           output: web, pdf
 
+      - title: CodeWar
+        output: web
+        subfolderitems:
+
+        - title: Find the unknown digit
+          url: /find_the_unknown_digit.html
+          output: web, pdf
+
       - title: codingame
         output: web
         subfolderitems:
