--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -254,6 +254,10 @@ entries:
           url: /cherry-pickup-ii.html
           output: web, pdf
 
+        - title: Koko Eating Bananas (binary search)
+          url: /koko-eating-bananas.html
+          output: web, pdf
+
       - title: baekjoon
         output: web
         subfolderitems:
