--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -290,6 +290,10 @@ entries:
           url: /find_the_unknown_digit.html
           output: web, pdf
 
+        - title: Snail
+          url: /snail.html
+          output: web, pdf
+
       - title: codingame
         output: web
         subfolderitems:
