--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -61,6 +61,10 @@ entries:
       url: /spring.html
       output: web, pdf
 
+    - title: python
+      url: /python.html
+      output: web, pdf
+
   - title: Android
     output: web,pdf
     folderitems:
