--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -45,6 +45,10 @@ entries:
     output: web,pdf
     folderitems:
 
+    - title: Web
+      url: /web.html
+      output: web, pdf
+
     - title: Spring Boot
       url: /springboot.html
       output: web, pdf
