--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -228,6 +228,10 @@ entries:
                     url: /merge-k-sorted-lists.html
                     output: web, pdf
 
+                  - title: Count Unreachable Pairs of Nodes in an Undirected Graph (Union find)
+                    url: /count-unreachable-pairs-of-nodes-in-an-undirected-graph.html
+                    output: web, pdf
+
               - title: baekjoon
                 output: web
                 subfolderitems:
