--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -307,6 +307,10 @@ entries:
             url: /summary-of-system-design-interview.html
             output: web, pdf
 
+          - title: Load Balancer vs Message Queue
+            url: /load-balancer-vs-mq.html
+            output: web, pdf
+
           - title: Web
             url: /web.html
             output: web, pdf
