--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -244,6 +244,10 @@ entries:
                     url: /predict-the-winner.html
                     output: web, pdf
 
+                  - title: Minimum ASCII Delete Sum for Two Strings (DP - topDown)
+                    url: /minimum-ascii-delete-sum-for-two-strings.html
+                    output: web, pdf
+
               - title: baekjoon
                 output: web
                 subfolderitems:
