--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -252,6 +252,10 @@ entries:
                     url: /search-a-2d-matrix.html
                     output: web, pdf
 
+                  - title: House Robber III (DFS)
+                    url: /house-robber-iii.html
+                    output: web, pdf
+
               - title: baekjoon
                 output: web
                 subfolderitems:
